Clean up controller-service boundaries and introduce global exception handling